# Game-Of-Life-OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
GameOfLife/: App.cpp  App.hpp  CMakeLists.txt  GameScene.cpp  GameScene.hpp  Main.cpp  OpenGLStuff.cpp  OpenGLStuff.hpp
GameOfLife/res/shaders/: FragmentShader.glsl  VertexShader.glsl
